syntax = "proto3";

package godesk;
option go_package = "./;godesk";
import "base.proto";

message DeviceInfoRequest {
  // 设备唯一标识
  string uuid = 1;
}

message DeviceInfoResponse {
  // 设备唯一标识
  string uuid = 1;
  // 设备码
  uint64 code = 2;
  // 操作系统, windows, darwin, linux
  string os = 3;
}

message CreateDeviceRequest {
  // 操作系统
  string os = 1;
}

message DeviceListRequest {
  // 基础请求
  BaseRequest base = 1;
}

message DeviceListItem {
  // 记录唯一标识
  string uuid = 1;
  // 设备码
  uint64 code = 2;
  // 备注
  string remark = 3;
  // 操作系统, windows, darwin, linux
  string os = 4;
  // 设备密码
  string password = 5;
}

message DeviceListResponse {
  int64 count = 1;
  repeated DeviceListItem list = 2;
}

message AddDeviceRequest {
  // 设备码
  uint64 code = 1;
  // 设备密码
  string password = 2;
  // 设备备注
  string remark = 3;
}

message EditDeviceRequest {
  // 记录唯一标识
  string uuid = 1;
  // 设备码
  uint64 code = 2;
  // 设备密码
  string password = 3;
  // 设备备注
  string remark = 4;
}

message DeleteDeviceRequest {
  // 记录唯一标识
  string uuid = 1;
}

service DeviceService {
  // 获取设备信息
  rpc GetDeviceInfo(DeviceInfoRequest) returns (DeviceInfoResponse) {}
  // 创建设备
  rpc CreateDevice(CreateDeviceRequest) returns (DeviceInfoResponse) {}

  // 获取设备列表
  rpc GetDeviceList(DeviceListRequest) returns (DeviceListResponse) {}
  // 添加设备
  rpc AddDevice(AddDeviceRequest) returns (EmptyResponse) {}
  // 修改设备
  rpc EditDevice(EditDeviceRequest) returns (EmptyResponse) {}
  // 删除设备
  rpc DeleteDevice(DeleteDeviceRequest) returns (EmptyResponse) {}
}
